<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="@dimen/home_tile_image"
                android:layout_height="@dimen/home_tile_image"
                android:src="@drawable/profile_tracker_coin_big"
                android:layout_marginTop="48dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:text="@string/total_coins"
                android:textSize="@dimen/total_text_coin_size"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvCoinsEarned"
                android:text="000"
                android:textSize="@dimen/text_coin_size"
                android:layout_marginBottom="@dimen/text_coin_margin_bottom"
                />

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


     <!--Buy 100 Coins-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/flBtnBuy100"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_profile_tracker_100coins"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_100"
            android:layout_marginTop="-4dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </FrameLayout>



       <!-- Buy 1000 Coins-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/flBtnBuy10K"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackground"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_profile_tracker_10kcoins"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_10k"
            android:layout_marginTop="-4dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

    </FrameLayout>

</LinearLayout>