<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_above="@+id/adview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/above"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/fcolorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/backbutton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:padding="3dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="3dp"
                    android:src="@drawable/back" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="2dp"

                android:layout_marginBottom="2dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Text To Emoji"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/fragment_record"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/inputText"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/chatText"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/setEmo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/to"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/convertEmojeeBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:background="@drawable/bg_direct_chat"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/transform" />


                    <EditText
                        android:id="@+id/emojeeTxt"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:hint="@string/emoji"
                        android:inputType="textShortMessage"
                        android:maxLength="2"
                        android:text=""
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/editedTextlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="45dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">

                        <EditText
                            android:id="@+id/convertedEmojeeTxt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:background="@color/colorWhite"
                            android:inputType="textMultiLine"
                            android:hint="Output Will Show Here!"
                            android:lineSpacingExtra="4dp"
                            android:layout_margin="8dp"

                            android:scrollbars="vertical"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_bar_bottom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="160dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/copyTxtBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_direct_chat"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1.5"
                        android:text="@string/copy" />

                    <Button
                        android:id="@+id/clearTxtBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_direct_chat"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:text="@string/clear" />

                    <Button
                        android:id="@+id/shareTxtBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/bg_direct_chat"
                        android:layout_weight="1.5"
                        android:text="@string/share" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/admob"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center">
                <!--            <com.startapp.android.publish.ads.banner.Banner-->
                <!--                android:id="@+id/startAppBanner"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_centerHorizontal="true"/>-->
            </RelativeLayout>
        </RelativeLayout>




    </LinearLayout>




    <com.mopub.mobileads.MoPubView
        android:id="@+id/adview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#12D1C1C1"
        app:moPubAdSize="match_view" />




</RelativeLayout>